--- a/AoC/AoC.csproj
+++ b/AoC/AoC.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Crayon" Version="2.0.69" />
     <PackageReference Include="ObjectDumper.NET" Version="4.1.3" />
+    <PackageReference Include="TextCopy" Version="6.2.1" />
   </ItemGroup>
 
   <ItemGroup>
