--- a/AoC/AoC.csproj
+++ b/AoC/AoC.csproj
@@ -21,6 +21,7 @@
     <Using Include="System.Numerics" />
     <Using Include="System.Text" />
     <Using Include="System.Text.RegularExpressions" />
+    <Using Include="System.Collections.Frozen" />
   </ItemGroup>
 
 </Project>
