--- a/AoC/AoC.csproj
+++ b/AoC/AoC.csproj
@@ -8,8 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Crayon" Version="2.0.69" />
-    <PackageReference Include="ObjectDumper.NET" Version="4.1.3" />
-    <PackageReference Include="System.Text.Json" Version="8.0.0" />
+    <PackageReference Include="Dumpify" Version="0.6.3" />
     <PackageReference Include="TextCopy" Version="6.2.1" />
   </ItemGroup>
 
@@ -23,6 +22,7 @@
     <Using Include="System.Text" />
     <Using Include="System.Text.RegularExpressions" />
     <Using Include="System.Collections.Frozen" />
+    <Using Include="Dumpify" />
   </ItemGroup>
 
 </Project>
