--- a/.github/workflows/release-workflow.yml
+++ b/.github/workflows/release-workflow.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - main
 
+env:
+  AocPuzzleInputCryptoKey: ${{ secrets.AOC_PUZZLE_INPUT_CRYPTO_KEY }}
+
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
