--- a/.github/workflows/CI-apps-workflow.yml
+++ b/.github/workflows/CI-apps-workflow.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Setup .NET Core
         uses: actions/setup-dotnet@v3
         with:
-          dotnet-version: 8.0.100
+          global-json-file: global.json
       - name: Restore
         run: dotnet restore
       - name: Build
