--- a/.github/workflows/release-workflow.yml
+++ b/.github/workflows/release-workflow.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v3
       with:
-        dotnet-version: 8.0.100
+        global-json-file: global.json
     - name: Decrypt the puzzle inputs
       run: dotnet run --project AoC.CLI --decrypt
       env:
